# sllama

./: .gitignore  LICENSE  README.md  linus-test.txt  pyproject.toml  setup.py  sllama.py
tests/: modelfile_smoke_test.py
